para_se_basear/Trab_Anna/SyntaticAnalyzer/Tests/Error/37.AMZ
// ok
int func1(int a, int b) {
	return a + b;
}

// ok
void func2() {
	int a = func1(10, 20);
}
// error
int func3() {
  int a = 1;
	func1(1,"a");
	return a;
}
